workloads/radarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr:amd64-v0.2.0.1480-ls55
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7878
          protocol: TCP
        volumeMounts:
        - name: radarr-config
          mountPath: "/config"
        - name: transmission-downloads
          mountPath: "/data/completed"
        - name: movies
          mountPath: "/movies"
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-radarr-config
      - name: transmission-downloads
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-transmission-downloads
      - name: movies
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-movies
