workloads/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 7878
    protocol: TCP
    name: http
  selector:
    app: radarr
