workloads/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - radarr.toothyshouse.com
  rules:
  - host: radarr.toothyshouse.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr-service
          servicePort: 80
